Added something for 9 months rate

--- a/SPFDM 1.ipynb
+++ b/SPFDM 1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "Text(0, 0.5, 'Rate (%)')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -74,18 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# As per 30 oct\n",
-    "LIBORrates = pd.DataFrame({'Name':['Treasury 3-Year','Treasury 5-Year','Treasury 7-Year','Treasury 10-Year','Treasury 30-Year'],'Rate':[0.189,0.365,0.604,0.824,1.607]}).set_index('Name')\n",
-    "swaprates  =  pd.DataFrame({'Name':['1-Year','2-Year','3-Year','5-Year','7-Year','10-Year','30-Year'],'Rate':[0.230,0.25,0.29,0.44,0.63,0.86,1.270]}).set_index('Name')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -111,58 +100,45 @@
        "      <th></th>\n",
        "      <th>Rate</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Name</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Treasury 3-Year</th>\n",
-       "      <td>0.189</td>\n",
+       "      <th>Rate_3M</th>\n",
+       "      <td>0.21650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Treasury 5-Year</th>\n",
-       "      <td>0.365</td>\n",
+       "      <th>Rate_6M</th>\n",
+       "      <td>0.24938</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Treasury 7-Year</th>\n",
-       "      <td>0.604</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Treasury 10-Year</th>\n",
-       "      <td>0.824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Treasury 30-Year</th>\n",
-       "      <td>1.607</td>\n",
+       "      <th>Rate_12M</th>\n",
+       "      <td>0.33663</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Rate\n",
-       "Name                   \n",
-       "Treasury 3-Year   0.189\n",
-       "Treasury 5-Year   0.365\n",
-       "Treasury 7-Year   0.604\n",
-       "Treasury 10-Year  0.824\n",
-       "Treasury 30-Year  1.607"
+       "             Rate\n",
+       "Rate_3M   0.21650\n",
+       "Rate_6M   0.24938\n",
+       "Rate_12M  0.33663"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LIBORrates"
+    "# Latest libor rates\n",
+    "# These are annualized interest rates\n",
+    "pd.DataFrame({'Rate':LIBOR.iloc[-1,2:]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -238,13 +214,80 @@
        "30-Year  1.27"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# For bootstrapping we also need the swap rates. These are obtained from \n",
+    "# http://www.interestrateswapstoday.com/swap-rates.html\n",
+    "swaprates  =  pd.DataFrame({'Name':['1-Year','2-Year','3-Year','5-Year','7-Year','10-Year','30-Year'],'Rate':[0.230,0.25,0.29,0.44,0.63,0.86,1.270]}).set_index('Name')\n",
     "swaprates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Having both libor and swap rates we should be able to bootstrap the zero curve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rate   -1.396304\n",
+      "Name: 1-Year, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:20: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "<>:20: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "<ipython-input-66-bcfb29fa4e0a>:20: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "  if time is not 12:\n"
+     ]
+    }
+   ],
+   "source": [
+    "class zero_curve():\n",
+    "    def __init__(self):\n",
+    "        libor3,libor6,libor12 = pd.DataFrame({'Rate':LIBOR.iloc[-1,2:]}).values\n",
+    "        self.libor3  = libor3[0]/100\n",
+    "        self.libor6  = libor6[0]/100\n",
+    "        self.libor12 = libor12[0]/100\n",
+    "        self.__9months__()\n",
+    "        return\n",
+    "    \n",
+    "    def __9months__(self):\n",
+    "        \"\"\"Consider bond selling at par\"\"\"\n",
+    "        npayments = 4\n",
+    "        nyears    = 1\n",
+    "        interval  = nyears / npayments\n",
+    "        rateperyear = swaprates.loc['1-Year']/100\n",
+    "        bondvalue   = 100\n",
+    "        rates = [self.libor3,self.libor6,self.libor12]\n",
+    "        value = 0\n",
+    "        for i,time in enumerate([3,6,12]):\n",
+    "            if time is not 12:\n",
+    "                payout = rateperyear * bondvalue * interval\n",
+    "            else:\n",
+    "                payout = bondvalue+rateperyear * bondvalue * interval\n",
+    "            value += (payout * np.exp(-time/12 * rates[i]))\n",
+    "        r9 = -4/3*np.log(4/(bondvalue*rateperyear)*(bondvalue-value))\n",
+    "        print(r9)\n",
+    "        \n",
+    "zc = zero_curve()"
    ]
   },
   {
