Implemented some code to estimate rate given discount rate and swaps. Exact replication of Hull example

--- a/SPFDM 1.ipynb
+++ b/SPFDM 1.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "Text(0, 0.5, 'Rate (%)')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -74,71 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Rate_3M</th>\n",
-       "      <td>0.21650</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rate_6M</th>\n",
-       "      <td>0.24938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rate_12M</th>\n",
-       "      <td>0.33663</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Rate\n",
-       "Rate_3M   0.21650\n",
-       "Rate_6M   0.24938\n",
-       "Rate_12M  0.33663"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Latest libor rates\n",
-    "# These are annualized interest rates\n",
-    "pd.DataFrame({'Rate':LIBOR.iloc[-1,2:]})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -171,50 +107,203 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1-Year</th>\n",
-       "      <td>0.23</td>\n",
+       "      <th>Rate_3M</th>\n",
+       "      <td>-0.52971</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2-Year</th>\n",
-       "      <td>0.25</td>\n",
+       "      <th>Rate_6M</th>\n",
+       "      <td>-0.52329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3-Year</th>\n",
-       "      <td>0.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5-Year</th>\n",
-       "      <td>0.44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7-Year</th>\n",
-       "      <td>0.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-Year</th>\n",
-       "      <td>0.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-Year</th>\n",
-       "      <td>1.27</td>\n",
+       "      <th>Rate_12M</th>\n",
+       "      <td>-0.47386</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Rate\n",
-       "Name         \n",
-       "1-Year   0.23\n",
-       "2-Year   0.25\n",
-       "3-Year   0.29\n",
-       "5-Year   0.44\n",
-       "7-Year   0.63\n",
-       "10-Year  0.86\n",
-       "30-Year  1.27"
+       "             Rate\n",
+       "Name             \n",
+       "Rate_3M  -0.52971\n",
+       "Rate_6M  -0.52329\n",
+       "Rate_12M -0.47386"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Libor rates from ICE\n",
+    "# https://www.theice.com/marketdata/reports/170\n",
+    "LIBOR = pd.DataFrame({'Name':['Rate_3M','Rate_6M','Rate_12M'],'Rate':[-0.52971,-0.52329,-0.47386]}).set_index('Name')\n",
+    "#LIBOR\n",
+    "# Latest libor rates\n",
+    "# These are annualized interest rates\n",
+    "# LIBOR = pd.DataFrame({'Rate':LIBOR.iloc[-1,2:]})\n",
+    "LIBOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rate_3M</th>\n",
+       "      <td>-0.62971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rate_6M</th>\n",
+       "      <td>-0.62329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rate_12M</th>\n",
+       "      <td>-0.57386</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Rate\n",
+       "Name             \n",
+       "Rate_3M  -0.62971\n",
+       "Rate_6M  -0.62329\n",
+       "Rate_12M -0.57386"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# OIS curve, is 0.1% lower than Libor curve assuming fixed spread\n",
+    "# We bootstrap the OIS for quarterly payments\n",
+    "OIS = LIBOR -0.1\n",
+    "OIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rate</th>\n",
+       "      <th>NMonths</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1-Year</th>\n",
+       "      <td>0.23</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2-Year</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3-Year</th>\n",
+       "      <td>0.29</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5-Year</th>\n",
+       "      <td>0.44</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7-Year</th>\n",
+       "      <td>0.63</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-Year</th>\n",
+       "      <td>0.86</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-Year</th>\n",
+       "      <td>1.27</td>\n",
+       "      <td>360</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Rate  NMonths\n",
+       "Name                  \n",
+       "1-Year   0.23       12\n",
+       "2-Year   0.25       24\n",
+       "3-Year   0.29       36\n",
+       "5-Year   0.44       60\n",
+       "7-Year   0.63       84\n",
+       "10-Year  0.86      120\n",
+       "30-Year  1.27      360"
+      ]
+     },
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,12 +312,14 @@
     "# For bootstrapping we also need the swap rates. These are obtained from \n",
     "# http://www.interestrateswapstoday.com/swap-rates.html\n",
     "swaprates  =  pd.DataFrame({'Name':['1-Year','2-Year','3-Year','5-Year','7-Year','10-Year','30-Year'],'Rate':[0.230,0.25,0.29,0.44,0.63,0.86,1.270]}).set_index('Name')\n",
+    "swaprates['NMonths'] = [12,24,36,60,84,120,360]\n",
+    "#We need to interpolate swaprates to get all intermediate values\n",
     "swaprates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,15 +328,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bootstrap(disc_rates, disc_rates_times,to_calculate, swaprate, duration, payterm):\n",
+    "    \"\"\"Takes known discounting rates and known swap rate for some times\n",
+    "       and returns the swaprate for an unknown time\"\"\"\n",
+    "    # payterm = years between payments\n",
+    "    # discount rates = libor/ois like rates\n",
+    "    # swaprate is the at-par rate for the IRS\n",
+    "    # duration is the number of years of the swap\n",
+    "    \n",
+    "    Npayments = duration / payterm - 1 # because we estimate one\n",
+    "    # We loop through all payments except for the unknown\n",
+    "    swapvalue = 0\n",
+    "    for i,time in enumerate(disc_rates_times):\n",
+    "        if time != duration: # intermediate payouts\n",
+    "            payout = swaprate * payterm\n",
+    "        elif time ==duration: #final payout\n",
+    "            payout = swaprate * payterm + 100\n",
+    "        depreciation = np.exp(-time*disc_rates[i]/100)\n",
+    "        swapvalue += payout * depreciation\n",
+    "    # The swap is now worth par, thus 100. We calculate the rate solving the \n",
+    "    # missing term\n",
+    "    \n",
+    "    if to_calculate == duration:\n",
+    "        # If we miss the last term, then divide by 100+coupon\n",
+    "        rate = np.log((100-swapvalue)/(swaprate * payterm + 100))/(-to_calculate)\n",
+    "    elif to_calculate != duration:\n",
+    "        # If we search for an intermediate term, divide by coupon\n",
+    "        rate = np.log((100-swapvalue)/(swaprate * payterm))/(-to_calculate)\n",
+    "    return (rate*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.952932701412535"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example from Hull\n",
+    "disc_rates = [4,4.5,4.8]\n",
+    "disc_rates_times = [0.5,1,1.5]\n",
+    "to_calculate = 2\n",
+    "swaprate   = 5\n",
+    "duration   = 2\n",
+    "payterm    = 0.5\n",
+    "bootstrap(disc_rates, disc_rates_times,to_calculate, swaprate, duration, payterm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.800000075157118"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inverse problem of Hull; we know 0.5,1,2\n",
+    "disc_rates = [4,4.5,4.95293270]\n",
+    "disc_rates_times = [0.5,1,2]\n",
+    "to_calculate = 1.5\n",
+    "swaprate   = 5\n",
+    "duration   = 2\n",
+    "payterm    = 0.5\n",
+    "bootstrap(disc_rates, disc_rates_times,to_calculate, swaprate, duration, payterm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rate   -1.396304\n",
-      "Name: 1-Year, dtype: float64\n"
+      "nan\n"
      ]
     },
     {
@@ -254,15 +434,17 @@
      "text": [
       "<>:20: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "<>:20: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "<ipython-input-66-bcfb29fa4e0a>:20: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "  if time is not 12:\n"
+      "<ipython-input-126-97578213f237>:20: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "  if time is not 12:\n",
+      "<ipython-input-126-97578213f237>:25: RuntimeWarning: invalid value encountered in log\n",
+      "  r9 = -4/3*np.log(4/(bondvalue*rateperyear)*(bondvalue-value))\n"
      ]
     }
    ],
    "source": [
     "class zero_curve():\n",
     "    def __init__(self):\n",
-    "        libor3,libor6,libor12 = pd.DataFrame({'Rate':LIBOR.iloc[-1,2:]}).values\n",
+    "        libor3,libor6,libor12 = LIBOR.values\n",
     "        self.libor3  = libor3[0]/100\n",
     "        self.libor6  = libor6[0]/100\n",
     "        self.libor12 = libor12[0]/100\n",
@@ -274,7 +456,7 @@
     "        npayments = 4\n",
     "        nyears    = 1\n",
     "        interval  = nyears / npayments\n",
-    "        rateperyear = swaprates.loc['1-Year']/100\n",
+    "        rateperyear = swaprates.loc['1-Year'].values[0]/100\n",
     "        bondvalue   = 100\n",
     "        rates = [self.libor3,self.libor6,self.libor12]\n",
     "        value = 0\n",
@@ -287,7 +469,150 @@
     "        r9 = -4/3*np.log(4/(bondvalue*rateperyear)*(bondvalue-value))\n",
     "        print(r9)\n",
     "        \n",
+    "    \n",
+    "    def __bootstrap__(init):\n",
+    "        \"\"\"Loop through all available swaps to get the zero rate of that period\"\"\"\n",
+    "        for i,nyears in enumerate([2,3,5,7,10,30]):\n",
+    "            # Obtain the swap rate for this period\n",
+    "            swaprate = swaprates.loc[nyears+'-Year'].value/100\n",
+    "            # The swaprate is the fixed lag that is received each quarter\n",
+    "            # The rate we need is the one making the bond worth par\n",
+    "            nmonths = nyears*4\n",
+    "            \n",
+    "            \n",
+    "            \n",
     "zc = zero_curve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>curve_date</th>\n",
+       "      <th>tenor</th>\n",
+       "      <th>zero_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>November 3rd, 2020</td>\n",
+       "      <td>3M</td>\n",
+       "      <td>0.002167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>November 3rd, 2020</td>\n",
+       "      <td>1Y</td>\n",
+       "      <td>0.002269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>November 3rd, 2020</td>\n",
+       "      <td>2Y</td>\n",
+       "      <td>0.002566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>November 3rd, 2020</td>\n",
+       "      <td>5Y</td>\n",
+       "      <td>0.004550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>November 3rd, 2020</td>\n",
+       "      <td>7Y</td>\n",
+       "      <td>0.006562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>November 3rd, 2020</td>\n",
+       "      <td>10Y</td>\n",
+       "      <td>0.008908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>November 3rd, 2020</td>\n",
+       "      <td>30Y</td>\n",
+       "      <td>0.013399</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           curve_date tenor  zero_rate\n",
+       "0  November 3rd, 2020    3M   0.002167\n",
+       "1  November 3rd, 2020    1Y   0.002269\n",
+       "2  November 3rd, 2020    2Y   0.002566\n",
+       "3  November 3rd, 2020    5Y   0.004550\n",
+       "4  November 3rd, 2020    7Y   0.006562\n",
+       "5  November 3rd, 2020   10Y   0.008908\n",
+       "6  November 3rd, 2020   30Y   0.013399"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import QuantLib as ql\n",
+    "\n",
+    "data = [{'Date': '2020-11-03','3M':0.21650, '1Y': 0.23, '2Y': 0.26, '5Y':  0.46, '7Y': 0.66, '10Y': 0.89, '30Y': 1.31}]\n",
+    "\n",
+    "calendar = ql.UnitedStates()\n",
+    "zeros = []\n",
+    "deposits = ['3M']\n",
+    "swaps = ['1Y', '2Y', '5Y', '7Y', '10Y', '30Y']\n",
+    "for row in data:\n",
+    "    # Build Curve for the date\n",
+    "    curve_date = ql.Date(row['Date'][:10], '%Y-%m-%d')\n",
+    "    ql.Settings.instance().evaluationDate = curve_date\n",
+    "    spot_date = calendar.advance(curve_date, 2, ql.Days)\n",
+    "    helpers = ql.RateHelperVector()\n",
+    "    for tenor in deposits:\n",
+    "        index = ql.USDLibor(ql.Period(tenor))\n",
+    "        helpers.append(\n",
+    "            ql.DepositRateHelper(row[tenor] / 100, index)\n",
+    "        )\n",
+    "    for tenor in swaps:\n",
+    "        swap_index = ql.UsdLiborSwapIsdaFixAm(ql.Period(tenor))\n",
+    "        helpers.append(\n",
+    "            ql.SwapRateHelper(row[tenor] / 100, swap_index)\n",
+    "        )\n",
+    "    curve = ql.PiecewiseCubicZero(curve_date, helpers, ql.Actual360())\n",
+    "\n",
+    "    # Get Zero Rates\n",
+    "    for tenor in deposits + swaps:\n",
+    "        date = calendar.advance(spot_date, ql.Period(tenor))\n",
+    "        rate = curve.zeroRate(date, ql.Actual360(), ql.Compounded, ql.Annual).rate()\n",
+    "        zeros.append({ 'curve_date': curve_date, 'tenor': tenor, 'zero_rate': rate})\n",
+    "\n",
+    "pd.DataFrame(zeros)"
    ]
   },
   {
