Added fitter to find rate

--- a/SPFDM 1.ipynb
+++ b/SPFDM 1.ipynb
@@ -655,20 +655,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-3.4818817015289625"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class swaps():\n",
     "    def __init__(self,start, lifetime,swaprate=None):\n",
@@ -689,18 +678,18 @@
     "            # We need to calculate the present day value\n",
     "            # of this swap, since it already exists and has\n",
     "            # a defined swaprate\n",
-    "            self.irsvalue = self.valuate()\n",
+    "            self.irsvalue = self.valuate(self.swaprate)\n",
     "        else:\n",
     "            # We need to find the swaprate such that the net\n",
     "            # present value equals zero\n",
-    "            self.getrate()\n",
+    "            self.get_rate()\n",
     "    \n",
-    "    def valuate(self):\n",
+    "    def valuate(self,swaprate):\n",
     "        \"\"\"We pay fixed and thus are short in fixed bond at \n",
     "           the swaprate r. We receive floating and are thus \n",
     "           long in floating bond.\"\"\"\n",
     "        # Fixed lag\n",
-    "        short = self.fixed_bond(self.swaprate)\n",
+    "        short = self.fixed_bond(swaprate)\n",
     "        # Floating lag\n",
     "        libor_float = 10.5\n",
     "        long = self.floating_bond(libor_float)\n",
@@ -733,14 +722,60 @@
     "        value = (100+libor * next_payment) * discount_factor\n",
     "        return value\n",
     "    \n",
-    "    #def get_rate(self):\n",
-    "        \n",
-    "swapper = swaps(0,1,8)      \n",
-    "    \n",
-    "swapper.irsvalue   \n",
-    "    \n",
-    "        \n",
-    "    "
+    "    def valuate_call(self,x):\n",
+    "        return np.abs(self.valuate(x))\n",
+    "   \n",
+    "    def get_rate(self):\n",
+    "        \"\"\"Find the rate r that makes the value of a swap equal \n",
+    "           zero\"\"\"\n",
+    "        from scipy.optimize import minimize\n",
+    "        fit_res = minimize(self.valuate_call,x0=[1])\n",
+    "        self.fitrate = fit_res['x'][0]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3.4818817015289625"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find value of swap\n",
+    "swapper = swaps(0,1,8)   \n",
+    "swapper.irsvalue   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.727583687444431"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find rate for swap\n",
+    "swapper = swaps(0,1,None)\n",
+    "swapper.fitrate"
    ]
   },
   {
