Now also earlier initialized swaps!

--- a/SPFDM 1.ipynb
+++ b/SPFDM 1.ipynb
@@ -643,24 +643,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zerocurve.loc[0.25] = 10\n",
-    "zerocurve.loc[0.5] = 10.5\n",
-    "zerocurve.loc[0.75] = 11\n",
-    "zerocurve.loc[1.00] = 11.5\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
     "class swaps():\n",
-    "    def __init__(self,start, lifetime,swaprate=None):\n",
+    "    def __init__(self,start, lifetime,dT=0.25,swaprate=None,lagged_libor=None):\n",
     "        \"\"\"Initialize function. For any swap we determine\n",
     "           its value as difference between long and short\n",
     "           position in bonds. If inception if now, we solve\n",
@@ -670,56 +658,72 @@
     "           start = float number of years, e.g. -0.5\n",
     "           lifetime = total lifetime since inception, e.g. 5\n",
     "           swaprate = some rate in % if defined. To find swaprate, \n",
-    "           it should be set to None\"\"\"\n",
+    "           it should be set to None\n",
+    "           lagged_libor = libor if swap already exists\"\"\"\n",
     "        self.swapstart = start\n",
     "        self.lifetime = lifetime\n",
     "        self.swaprate=swaprate\n",
+    "        self.dT = dT\n",
+    "        if lagged_libor:\n",
+    "            self.floatlibor = lagged_libor\n",
+    "        else:\n",
+    "            self.floatlibor = 10.5\n",
     "        if self.swaprate:\n",
     "            # We need to calculate the present day value\n",
     "            # of this swap, since it already exists and has\n",
     "            # a defined swaprate\n",
-    "            self.irsvalue = self.valuate(self.swaprate)\n",
+    "            self.irsvalue = self.valuate(self.swaprate,print_=True)\n",
     "        else:\n",
     "            # We need to find the swaprate such that the net\n",
     "            # present value equals zero\n",
     "            self.get_rate()\n",
     "    \n",
-    "    def valuate(self,swaprate):\n",
+    "    def valuate(self,swaprate,print_=False,lagged_libor = 10.2):\n",
     "        \"\"\"We pay fixed and thus are short in fixed bond at \n",
     "           the swaprate r. We receive floating and are thus \n",
     "           long in floating bond.\"\"\"\n",
     "        # Fixed lag\n",
     "        short = self.fixed_bond(swaprate)\n",
+    "        if print_:\n",
+    "            print('Fixed',short)\n",
     "        # Floating lag\n",
-    "        libor_float = 10.5\n",
-    "        long = self.floating_bond(libor_float)\n",
-    "        \n",
+    "        long = self.floating_bond(self.floatlibor)\n",
+    "        if print_:\n",
+    "            print('Float',long)\n",
     "        return short - long\n",
     "        \n",
     "    def fixed_bond(self,rate):\n",
-    "        time_remaining = self.lifetime - self.swapstart\n",
-    "        timesteps = np.arange(0.25,time_remaining,0.25)\n",
+    "        time_remaining = self.lifetime + self.swapstart\n",
+    "        start     = [self.swapstart+w*self.dT for w in range(0,1000)]\n",
+    "        start     = np.sort(np.abs(start))[1]\n",
+    "        \n",
+    "        timesteps = np.arange(start,time_remaining,self.dT)\n",
+    "        \n",
     "        # Each step in timesteps, we get discounted floating rate\n",
     "        # Additionally, we receive final payment\n",
     "        value = 0\n",
     "        for timestep in timesteps:\n",
     "            discount_rate = zerocurve.loc[timestep].iloc[0]\n",
     "            discount_factor = np.exp(-timestep*discount_rate/100)\n",
-    "            discounted_cash = (rate/4) * discount_factor\n",
+    "            discounted_cash = (rate*self.dT) * discount_factor\n",
     "            value += discounted_cash\n",
     "        # Final payment\n",
     "        discount_rate = zerocurve.loc[time_remaining].iloc[0]\n",
     "        discount_factor = np.exp(-time_remaining*discount_rate/100)\n",
-    "        value += (100+rate/4)*discount_factor\n",
+    "        value += (100+rate*self.dT)*discount_factor\n",
     "        return value\n",
     "    \n",
     "    def floating_bond(self,libor):\n",
     "        \"\"\"Floating bond is worth par after the first next payment\n",
     "           and pays the LIBOR rate\"\"\"\n",
-    "        next_payment = 0.25\n",
-    "        discount_rate = zerocurve.loc[next_payment].iloc[0]\n",
-    "        discount_factor = np.exp(-next_payment*discount_rate/100)\n",
-    "        value = (100+libor * next_payment) * discount_factor\n",
+    "        time_remaining = self.lifetime + self.swapstart\n",
+    "        start     = [self.swapstart+w*self.dT for w in range(0,1000)]\n",
+    "        start     = np.sort(np.abs(start))[1]\n",
+    "        \n",
+    "        discount_rate = zerocurve.loc[start].iloc[0]\n",
+    "        discount_factor = np.exp(-start*discount_rate/100)\n",
+    "        value = (100+libor * self.dT) * discount_factor\n",
+    "        \n",
     "        return value\n",
     "    \n",
     "    def valuate_call(self,x):\n",
@@ -736,29 +740,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixed 96.60929802037867\n",
+      "Float 100.09117972190764\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "-3.4818817015289625"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Paper example\n",
+    "zerocurve.loc[0.25] = 10\n",
+    "zerocurve.loc[0.5] = 10.5\n",
+    "zerocurve.loc[0.75] = 11\n",
+    "zerocurve.loc[1] = 11.5\n",
+    "\n",
     "# Find value of swap\n",
-    "swapper = swaps(0,1,8)   \n",
+    "swapper = swaps(0,1,0.25,8)#-0.25,1.5,0.5,8)   \n",
     "swapper.irsvalue   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -767,15 +785,49 @@
        "11.727583687444431"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Find rate for swap\n",
-    "swapper = swaps(0,1,None)\n",
+    "swapper = swaps(0,1,0.25,None)\n",
     "swapper.fitrate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixed 98.23789590103716\n",
+      "Float 102.50507175417775\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-4.267175853140586"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example slides\n",
+    "zerocurve.loc[0.25] = 10\n",
+    "zerocurve.loc[0.75] = 10.5\n",
+    "zerocurve.loc[1.25] = 11\n",
+    "\n",
+    "swapper = swaps(-0.25,1.5,0.5,8,10.2)#-0.25,1.5,0.5,8)   \n",
+    "swapper.irsvalue  "
    ]
   },
   {
