--- a/SPFDM 1.ipynb
+++ b/SPFDM 1.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "# OIS curve, is 0.1% lower than Libor curve assuming fixed spread\n",
     "# We bootstrap the OIS for quarterly payments\n",
-    "OIS = (LIBOR -0.1).sort_index()\n",
+    "OIS = (LIBOR -0.1).sort_value(by='Rate')\n",
     "OIS"
    ]
   },
